<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

    <modelVersion>4.0.0</modelVersion>

    <groupId>com.bigbrother</groupId>
    <artifactId>BiliCraftTicketSystem</artifactId>
    <version>2.0.0</version>
    <packaging>pom</packaging>

    <modules>
        <module>bcts-plugin</module>
        <module>bcts-guard-plugin</module>
        <module>bcts-guard-core</module>
    </modules>

    <properties>
        <java.version>21</java.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <paper.version>1.21.11-R0.1-SNAPSHOT</paper.version>
        <traincarts.version>1.21.11-v1</traincarts.version>
        <vault.version>1.7</vault.version>
        <hikari.version>5.0.1</hikari.version>
        <invui.version>1.49</invui.version>
        <geojson.version>1.14</geojson.version>
        <lombok.version>1.18.30</lombok.version>
        <cloud.core.version>2.0.0</cloud.core.version>
        <cloud.annotations.version>2.0.0</cloud.annotations.version>
        <cloud.minecraft.extras.version>2.0.0-beta.10</cloud.minecraft.extras.version>
        <cloud.paper.version>2.0.0-beta.10</cloud.paper.version>
        <junit.version>5.10.2</junit.version>
    </properties>

    <repositories>
        <repository>
            <id>papermc-repo</id>
            <url>https://repo.papermc.io/repository/maven-public/</url>
        </repository>
        <repository>
            <id>sonatype</id>
            <url>https://oss.sonatype.org/content/groups/public/</url>
        </repository>
        <repository>
            <id>mg-dev</id>
            <name>ci.mg-dev.eu repository</name>
            <url>https://ci.mg-dev.eu/plugin/repository/everything/</url>
        </repository>
        <repository>
            <id>jitpack.io</id>
            <url>https://jitpack.io</url>
        </repository>
        <repository>
            <id>xenondevs</id>
            <url>https://repo.xenondevs.xyz/releases</url>
        </repository>
    </repositories>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>io.papermc.paper</groupId>
                <artifactId>paper-api</artifactId>
                <version>${paper.version}</version>
                <scope>provided</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

</project>